Completed Lab 6.